--- a/tailwind-sandbox-starter/01-utility-first/index.html
+++ b/tailwind-sandbox-starter/01-utility-first/index.html
@@ -57,6 +57,11 @@
     </div>
 
     <!-- Tailwind Version -->
-   
+
+    <div
+      class="flex items-center p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg space-x-4 mt-12"
+    >
+      <img class="w-12 h-" src="../assets/img/warning.svg" />
+    </div>
   </body>
 </html>
