--- a/tailwind-sandbox-starter/02-colors/index.html
+++ b/tailwind-sandbox-starter/02-colors/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<input lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,26 +7,63 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Colors</title>
   </head>
-  <body>
+  <input>
     <!-- Default colors -->
     <!-- white, black, red, green, blue, orange, yellow, purple, lime, emerald, teal, cyan, indigo, violet, fuchsia, pink, rose, sky, gray, slate, zinc, neutral, stone, amber,  -->
 
     <!-- Text Colors -->
+    <p class="text-red-500">Tailwind is Awesome</p>
+    <p class="text-slate-500">Tailwind is Awesome</p>
+    <p class="text-zinc-500">Tailwind is Awesome</p>
+    <p class="text-green-500">Tailwind is Awesome</p>
 
     <!-- Background Colors -->
+    <p class="bg-red-500">Tailwind is Awesome</p>
+    <p class="bg-slate-500">Tailwind is Awesome</p>
+    <p class="bg-zinc-500">Tailwind is Awesome</p>
+    <p class="bg-green-500">Tailwind is Awesome</p>
+
+    <p class="bg-red-500 text-yellow-300">Tailwind is Awesome</p>
+    <p class="bg-slate-500 text-red-300">Tailwind is Awesome</p>
+    <p class="bg-zinc-500 text-black-300">Tailwind is Awesome</p>
+    <p class="bg-green-500 text-red-300">Tailwind is Awesome</p>
 
     <!-- Text Underline -->
+    <p class="underline decoration-red-400">Talwind is Aweosme</p>
+    <p class="underline decoration-green-400">Talwind is Aweosme</p>
 
     <!-- Border Colors -->
+    <input type="text" class="border border-red-500"></input>
+      <input type="text" class="border border-green-500"></input>
+        <input type="text" class="border border-blue-500"></input>
 
     <!-- Divide Colors -->
+    <div class="divide-y divide-blue-300">
+      <div>item 1</div>
+      <div>item 1</div>
+      <div>item 1</div>
+      <div>item 1</div>
+      <div>item 1</div>
+
+
+    </div>
 
     <!-- Outline Colors -->
+    <button class="outline outline-red-500">Hello</button>
+      <button class="outline outline-green-500">Hello</button
 
-    <!-- Box Shadow Colors (Opacity defaults to 100, but you can set it)-->
 
-    <!-- Accent Colors -->
+    < - - Box Shadow Colors (Opacity defaults to 100, but you can set it)  -->
+
+
+     <div class="shadow-lg bg-cyan-500 shadow-cyan-500">Subscribe
+
+     </div>
+
+    <!-- Accent Colors --> 
+    <input type="checkbox" class="accent-cyan-500">
 
     <!-- Arbitrary Colors -->
+    <div class="bg-[#427fab]">Hello</div>
   </body>
 </html>
