--- a/tailwind-sandbox-starter/03-container-spacing/index.html
+++ b/tailwind-sandbox-starter/03-container-spacing/index.html
@@ -21,12 +21,28 @@
       </article>
 
       <!-- Margin -->
+      <div class="bg-slate-500 m-2">Hello World</div>
 
       <!-- Padding -->
 
       <!-- Space Between X -->
 
+      <div class="flex mt-24 space-x-4">
+        <div>Item-1</div>
+        <div>Item-1</div>
+        <div>Item-1</div>
+        <div>Item-1</div>
+        <div>Item-1</div>
+      </div>
+
       <!-- Space Between Y -->
+      <div class="flex flex-col mt-24 space-y-6">
+        <div>Item-1</div>
+        <div>Item-1</div>
+        <div>Item-1</div>
+        <div>Item-1</div>
+        <div>Item-1</div>
+      </div>
     </div>
   </body>
 </html>
