--- a/tailwind-sandbox-starter/04-typography/index.html
+++ b/tailwind-sandbox-starter/04-typography/index.html
@@ -5,26 +5,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config =
+            module.exports = {
+        theme: {
+          fontFamily: {
+            'sans': ['ui-sans-serif', 'system-ui', ...],
+            'serif': ['ui-serif', 'Georgia'],
+            'mono': ['ui-monospace', 'SFMono-Regular', ...],
+            'display': ['Oswald', ...],
+            'body': ['"Open Sans"', ...],
+          }
+        }
+      }
+    </script>
     <title>Typography</title>
   </head>
   <body>
     <!-- Font Family -->
+    <div class="font-sans">Tailwind is awesome</div>
+    <div class="font-serif">Tailwind is awesome</div>
+    <div class="font-mono">Tailwind is awesome</div>
 
     <!-- Font Size -->
+    <div class="text-xs">Tailwind is awesome</div>
+    <div class="text-sm">Tailwind is awesome</div>
+    <div class="text-base">Tailwind is awesome</div>
+    <div class="text-xl">Tailwind is awesome</div>
+    <div class="text-2xl">Tailwind is awesome</div>
+    <div class="text-9xl">Tailwind is awesome</div>
 
     <!-- Font Weight -->
+    <div class="font-light">Tailwind is Awesome</div>
+    <div class="font-normal">Tailwind is Awesome</div>
+    <div class="font-medium">Tailwind is Awesome</div>
+    <div class="font-semibold">Tailwind is Awesome</div>
+    <div class="font-bold">Tailwind is Awesome</div>
 
     <!-- Letter Spacing -->
+    <div class="tracking-tight">Tailwind is Awesome</div>
+    <div class="tracking-normal">Tailwind is Awesome</div>
+    <div class="font-bold">Tailwind is Awesome</div>
 
     <!-- Text Alignment -->
+    <div class="text-left">Tailwind is Awesome</div>
+    <div class="text-center">Tailwind is Awesome</div>
+    <div class="text-right">Tailwind is Awesome</div>
 
     <!-- Text Decoration -->
+    <div class="underline decoration-4 decoration-red-300">
+      Tailwind is Awesome
+    </div>
+    <div class="underline decoration-double">Tailwind is Awesome</div>
+    <div class="underline decoration-dotted">Tailwind is Awesome</div>
+    <div class="underline decoration-wavy">Tailwind is Awesome</div>
+    <div class="underline decoration-dashed">Tailwind is Awesome</div>
 
     <!-- Decoration Style -->
 
     <!-- Decoration Offset -->
+    <div class="underline decoration-4 decoration-red-300 underline-offset-8">
+      Tailwind is Awesome
+    </div>
 
     <!-- Text Transform -->
+    <p class="normal-case">Tailwind is Awesome</p>
+    <p class="capitalize">Tailwind is Awesome</p>
+    <p class="lowercase">Tailwind is Awesome</p>
+    <p class="uppercase">Tailwind is Awesome</p>
   </body>
 </html>
 
