--- a/tailwind-sandbox-starter/05-sizing/index.html
+++ b/tailwind-sandbox-starter/05-sizing/index.html
@@ -10,25 +10,47 @@
   <body>
     <!-- Width -->
 
+    <div class="bg-green-400 text-white w-4">Hello</div>
+    <div class="bg-green-400 text-white w-84">Hello</div>
+    <div class="bg-green-400 text-white w-48">Hello</div>
+
     <!-- Percentages -->
+    <div class="bg-red-600 text-white w-1/2">Heello</div>
+    <div class="bg-red-600 text-white w-1/5">Heello</div>
+    <div class="bg-red-600 text-white w-1/9">Heello</div>
 
     <!-- Width of the viewport -->
+    <div class="bg-blue-400 text-white w-full">Hello</div>
 
     <!-- 100% of container -->
+    <div class="bg-blue-300 text-green w-full">Hello</div>
 
     <!-- min/max content -->
 
     <!-- Arbitrary width -->
+    <div class="bg-red-400 text-white w-[300px]">Hello</div>
 
     <!-- Max Width -->
+    <div class="bg-gray-300 max-w-lg">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore quasi
+      dignissimos modi nihil harum eum dolores in quos quidem consequatur.
+    </div>
 
     <!-- Height (Most of the same options as widths) -->
+    <div class="flex items-end">
+      <div class="bg-orange-500 w-20 h-2">Hello</div>
+      <div class="bg-orange-500 w-20 h-42">Hello</div>
+      <div class="bg-orange-500 w-20 h-52">Hello</div>
+      <div class="bg-orange-500 w-20 h-72">Hello</div>
+      <div class="bg-orange-500 w-20 h-96">Hello</div>
+    </div>
 
     <!-- Min Height -->
 
     <!-- Max Height -->
 
     <!-- Full screen height -->
+    <div class="bg-blue-500 text-white h-screen">Hello</div>
   </body>
 </html>
 
