--- a/tailwind-sandbox-starter/08-borders/index.html
+++ b/tailwind-sandbox-starter/08-borders/index.html
@@ -9,10 +9,38 @@
   </head>
   <body>
     <!-- Border Width & Colors -->
+    <div class="m-3 p-5 w-96 border">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, iste.
+    </div>
+    <div class="m-3 p-5 w-96 border-2">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, iste.
+    </div>
+    <div class="m-3 p-5 w-96 border-4">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, iste.
+    </div>
+    <div class="m-3 p-5 w-96 border-4 border-red-500">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, iste.
+    </div>
+    <div class="m-3 p-5 w-96 border-x-4">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, iste.
+    </div>
+    <div class="m-3 p-5 w-96 border-y-4">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, iste.
+    </div>
 
     <!-- Border Radius -->
+    <div class="m-3 p-5 w-96 border-4 rounded-lg">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, iste.
+    </div>
+    <div class="m-3 p-5 w-96 border-4 rounded-xl">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, iste.
+    </div>
+    <div class="m-3 p-5 w-96 border-4 rounded-2xl">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, iste.
+    </div>
 
     <!-- Outline -->
+    <dutton class="outline outline-4 outline-red-500">Click</dutton>
   </body>
 </html>
 
