--- a/tailwind-sandbox-starter/09-filters/index.html
+++ b/tailwind-sandbox-starter/09-filters/index.html
@@ -9,18 +9,46 @@
   </head>
   <body>
     <!-- Blur -->
-    
-    <!-- Brightness ->
+    <div class="blur-sm">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum veritatis
+      necessitatibus distinctio mollitia deserunt corporis veniam omnis alias
+      maiores tempora.
+    </div>
+    <div class="blur">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum veritatis
+      necessitatibus distinctio mollitia deserunt corporis veniam omnis alias
+      maiores tempora.
+    </div>
+
+    <img class="blur" src="../assets/img/img1.jpg" />
+
+    <!-- Brightness -->
+    <img class="brightness-50" src="../assets/img/img1.jpg" />
+    <img class="brightness-90" src="../assets/img/img1.jpg" />
+    <img class="brightness-20" src="../assets/img/img1.jpg" />
+    <img class="brightness-60" src="../assets/img/img1.jpg" />
 
     <!-- Contrast -->
+    <img class="contrast-0" src="../assets/img/img2.jpg" />
+    <img class="contrast-50" src="../assets/img/img2.jpg" />
+    <img class="contrast-70" src="../assets/img/img2.jpg" />
+    <img class="contrast-90" src="../assets/img/img2.jpg" />
+    <img class="contrast-150" src="../assets/img/img2.jpg" />
 
     <!-- Grayscale -->
+    <img class="grayscale" src="../assets/img/img2.jpg" />
 
     <!-- Invert -->
+    <img class="invert" src="../assets/img/img2.jpg" />
 
     <!-- Sepia -->
+    <img class="sepia" src="../assets/img/img2.jpg" />
 
     <!-- Hue Rotate -->
+    <img class="hue-rotate-15" src="../assets/img/img3.jpg" />
+    <img class="hue-rotate-15" src="../assets/img/img3.jpg" />
+    <img class="hue-rotate-90" src="../assets/img/img3.jpg" />
+    <img class="-hue-rotate-120" src="../assets/img/img3.jpg" />
   </body>
 </html>
 
