--- a/tailwind-sandbox-starter/10-interactivity/index.html
+++ b/tailwind-sandbox-starter/10-interactivity/index.html
@@ -9,14 +9,41 @@
   </head>
   <body>
     <!-- Hover State Styling -->
+    <button
+      class="bg-black text-white py-3 px-5 rounded-lg m-3 hover:bg-orange-600 hover:text-white-"
+    >
+      click
+    </button>
 
     <!-- Focus State Styling -->
+    <button
+      class="bg-black text-white py-3 px-5 rounded-lg m-3 focus:bg-green-600 focus:text-white-"
+    >
+      click
+    </button>
 
     <!-- Active State Styling -->
+    <button
+      class="bg-black text-white py-3 px-5 rounded-lg m-3 active:bg-yellow-600 active:text-white-"
+    >
+      click
+    </button>
 
     <!-- Styling based on parent state -->
+    <a
+      href=""
+      class="group block max-w-xs mx-auto rounded-lg p-6 bg-white shadow-lg space-y-3 hover:bg-sky-500"
+    >
+      <h1 class="group-hover:text-white">Over Powered</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, quia.
+      </p>
+    </a>
 
     <!-- Pseudo Classes -->
+    <ul>
+      <li></li>
+    </ul>
 
     <!-- Appearance -->
     <!-- Use appearance-none to reset any browser specific styling on an element. This utility is often used when creating custom form components. -->
