changed to quua to fazian

--- a/tailwind-sandbox-starter/10-interactivity/index.html
+++ b/tailwind-sandbox-starter/10-interactivity/index.html
@@ -36,7 +36,7 @@
     >
       <h1 class="group-hover:text-white">Over Powered</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, quia.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, faizan
       </p>
     </a>
 
