changed to consectetur to downfall

--- a/tailwind-sandbox-starter/10-interactivity/index.html
+++ b/tailwind-sandbox-starter/10-interactivity/index.html
@@ -35,9 +35,7 @@
       class="group block max-w-xs mx-auto rounded-lg p-6 bg-white shadow-lg space-y-3 hover:bg-sky-500"
     >
       <h1 class="group-hover:text-white">Over Powered</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, faizan
-      </p>
+      <p>Lorem ipsum dolor sit amet downfall adipisicing elit. Omnis, faizan</p>
     </a>
 
     <!-- Pseudo Classes -->
