changes in pseudo appearance and more

--- a/tailwind-sandbox-starter/10-interactivity/index.html
+++ b/tailwind-sandbox-starter/10-interactivity/index.html
@@ -40,17 +40,56 @@
 
     <!-- Pseudo Classes -->
     <ul>
-      <li></li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        item 1
+      </li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        item 2
+      </li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        item 3
+      </li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        item 4
+      </li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        item 5
+      </li>
     </ul>
 
     <!-- Appearance -->
     <!-- Use appearance-none to reset any browser specific styling on an element. This utility is often used when creating custom form components. -->
+    <select class="appearance-none">
+      <option value="yes">Yes</option>
+      <option value="no">No</option>
+    </select>
 
     <!-- Cursor -->
+    <button class="bg-black text-white py-3 px-5 rounded-lg m-3 cursor-wait">
+      submit
+    </button>
+    <button
+      class="bg-black text-white py-3 px-5 rounded-lg m-3 cursor-not-allowed"
+    >
+      submit
+    </button>
 
     <!-- Resize -->
 
     <!-- User Select -->
+    <div class="select-none">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates,
+      possimus!
+    </div>
+    <div class="select-all">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates,
+      possimus!
+    </div>
+    <div class="select-text">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates,
+      possimus!
+    </div>
+    v
 
     <!-- Smooth Scroll Example -->
   </body>
