--- a/tailwind-sandbox-starter/11-breakpoints/index.html
+++ b/tailwind-sandbox-starter/11-breakpoints/index.html
@@ -8,7 +8,19 @@
     <title>Breakpoints & Media Queries</title>
   </head>
   <!-- Tailwind is mobile-first -->
-  <body></body>
+  <body
+    class="bg-black sm:bg-green-800 md:bg-blue-600 lg:bg-yellow-800 xl:bg-red-700 2xl:bg-purple-600"
+  >
+    <h1 class="text-white text-4xl"></h1>
+    <script>
+      function showBrowserWidth() {
+        const width = window.innerWidth;
+        document.querySelector("h1").innertext = `width:{width}px`;
+      }
+      window.onload = showBrowserWidth;
+      window.onresize = showBrowserWidth;
+    </script>
+  </body>
 </html>
 
 <!-- Breakpoint Classes
