--- a/tailwind-sandbox-starter/12-columns/index.html
+++ b/tailwind-sandbox-starter/12-columns/index.html
@@ -9,8 +9,19 @@
   </head>
   <body>
     <!-- Columns -->
-
+    <div class="columns-4">
+      <img class="w-full" src="../assets/img/img1.jpg" />
+      <img class="w-full" src="../assets/img/img2.jpg" />
+      <img class="w-full" src="../assets/img/img3.jpg" />
+      <img class="w-full" src="../assets/img/img4.jpg" />
+    </div>
     <!-- Aspect Ratio -->
+    <div class="columns-4">
+      <img class="w-full aspect-video" src="../assets/img/img1.jpg" />
+      <img class="w-full" src="../assets/img/img2.jpg" />
+      <img class="w-full aspect-square" src="../assets/img/img3.jpg" />
+      <img class="w-full" src="../assets/img/img4.jpg" />
+    </div>
   </body>
 </html>
 
