changes in grid

--- a/tailwind-sandbox-starter/14-grid/index.html
+++ b/tailwind-sandbox-starter/14-grid/index.html
@@ -9,6 +9,15 @@
   </head>
   <body>
     <!-- Grid cols and rows -->
+    <div class="grid grid-cols-2 gap-4 w-68">
+      <div class="col-span-2 border border-blue-600 bg-red-600 p-10">Hello</div>
+      <div class="row-span-3 border border-blue-600 bg-red-600 p-10">Hello</div>
+      <div class="border border-blue-600 bg-red-600 p-10">Hello</div>
+      <div class="border border-blue-600 bg-red-600 p-10">Hello</div>
+      <div class="border border-blue-600 bg-red-600 p-10">Hello</div>
+      <div class="border border-blue-600 bg-red-600 p-10">Hello</div>
+      <div class="border border-blue-600 bg-red-600 p-10">Hello</div>
+    </div>
 
     <!-- Col and row span -->
   </body>
