--- a/tailwind-sandbox-starter/15-transform-transition/index.html
+++ b/tailwind-sandbox-starter/15-transform-transition/index.html
@@ -16,10 +16,24 @@
     </button>
 
     <!-- Transition -->
+    <button
+      class="px-8 py-2 m-24 text-white bg-blue-500 rounded hover:bg-blue-700 transition-colors duration-1000 hover:bg-red-600 rotate-12"
+    >
+      Click me
+    </button>
 
     <!-- Transition & Transform -->
+    <button
+      class="px-8 py-2 m-24 text-white bg-blue-500 rounded hover:bg-blue-700 transition-transform duration-1000"
+    >
+      Click me
+    </button>
 
     <!-- Transform & Transition -->
+    <img
+      class="w-48 hover:rotate-180 hover:scale-75 hover:skew-x-12 transition duration-1000"
+      src="../assets/img/img2.jpg"
+    />
   </body>
 </html>
 
